use cred helper

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -10,6 +10,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Configure cred helper
+      run: git config credential.helper "/bin/bash $(pwd)/.github/credential-helper.sh"
     - name: Clone Gitlab.com caspr-io/root
       run: git clone https://gitlab.com/caspr-io/root ../root
     - name: Make docker image
